# genai-challenge-lab

./: README.md  pyproject.toml
genai_challenge/: experiment_code_pilot.yaml
genai_challenge/data/prompts/: custom_prompt_1.txt
genai_challenge/experiments/: prompts.py
genai_challenge/io/: __init__.py  experiment_config_reader.py  nist_reader.py  prompt_reader.py
genai_challenge/llm/: model_clients.py  prompt_registry.py
genai_challenge/models/: code_pilot_data.py  messages.py
genai_challenge/pipelines/: code_pilot_main.py  retry_utils.py
genai_challenge/results/: results-EVAL-01_TR-02_SP-05_PH-11_SYS-00087_E-00099_20260105-043723-4283.csv  results-EVAL-01_TR-02_SP-05_PH-11_SYS-00087_E-00099_20260107-072559-6217.csv
genai_challenge/tests/: __init__.py  test_litellm_tool_call.py  test_model_clients.py  test_nist_reader.py
