[project]
name = "nist-ai-challenge"
version = "1.0.0"
description = "Experimental framework for GenAI challenges."
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
  "litellm>=1.80.13",
  "tenacity>=9.1.2",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.4",
  "mypy>=1.19.1",
  "pytest>=9.0",
]

# -------------------------
# Ruff: formatter + linter
# -------------------------

[tool.ruff]
# ruff format
line-length = 80

[tool.ruff.lint]
# Core rules:
# E/F  -> pycodestyle + pyflakes (errors, undefined names)
# I    -> import sorting
# B    -> flake8-bugbear (common bugs)
# UP   -> pyupgrade (modern Python)
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# -------------------------
# MyPy: static type checking
# -------------------------
[tool.mypy]
python_version = "3.12"
warn_unused_configs = true

# Reasonable defaults (not overly strict)
check_untyped_defs = true
disallow_untyped_defs = false
ignore_missing_imports = true
strict_optional = true
warn_return_any = true
warn_unused_ignores = true
no_implicit_optional = true
